[gd_scene load_steps=21 format=3 uid="uid://xg4d08tiinl8"]

[ext_resource type="Script" path="res://Scripts/pause.gd" id="1_tussv"]
[ext_resource type="Texture2D" uid="uid://dyos37njwcqw" path="res://Assets/Sprites/UI/Ui/Dialog/FacesetBox.png" id="2_avlft"]
[ext_resource type="FontFile" uid="uid://qm513m47rjve" path="res://Assets/Fonts/8-bit-hud.ttf" id="4_kc4od"]
[ext_resource type="Texture2D" uid="uid://bv6t5snecp0ln" path="res://Assets/Sprites/Templates/Description BG.png" id="5_85hed"]
[ext_resource type="Texture2D" uid="uid://cwix5fbhig8q0" path="res://Assets/Sprites/Portraits/Knight.png" id="5_rg5mu"]
[ext_resource type="FontFile" uid="uid://dsni156ru77g5" path="res://Assets/Fonts/Textos.otf" id="6_qlr0o"]
[ext_resource type="Texture2D" uid="uid://3gklm8my1iyj" path="res://Assets/Sprites/Icons/Option.png" id="7_hj2gk"]
[ext_resource type="Texture2D" uid="uid://6viku28itdwd" path="res://Assets/Sprites/Templates/Screen Marquee.png" id="8_jykdq"]
[ext_resource type="Texture2D" uid="uid://bg1y7eyqygwhm" path="res://Assets/Sprites/Backgrounds/Background 4.png" id="9_nhv27"]
[ext_resource type="Texture2D" uid="uid://dihua0hk6lmld" path="res://Assets/Sprites/Icons/Locked.png" id="10_gxb87"]
[ext_resource type="Texture2D" uid="uid://c8ujrp8wjgrn0" path="res://Assets/Sprites/Icons/Document.png" id="10_y7rkn"]
[ext_resource type="Texture2D" uid="uid://dssn5dmyq2d51" path="res://Assets/Sprites/Icons/Trophy.png" id="11_slj6t"]
[ext_resource type="Texture2D" uid="uid://cbhsmxlsjf0dd" path="res://Assets/Sprites/Icons/Skull.png" id="12_ayrlj"]
[ext_resource type="Texture2D" uid="uid://4rul310r3ghw" path="res://Assets/Sprites/Icons/Keyboard.png" id="12_js1tp"]
[ext_resource type="Texture2D" uid="uid://c5qqlul24hgq4" path="res://Assets/Sprites/Icons/Lightbulb.png" id="13_gr14l"]
[ext_resource type="Texture2D" uid="uid://dgarhgiw1u62c" path="res://Assets/Sprites/UI/Ui/Theme/ThemeWood/checked.png" id="14_rfg0m"]
[ext_resource type="FontFile" uid="uid://g3ewt3rhuayq" path="res://Assets/Fonts/Gameplay.ttf" id="16_l2nbv"]

[sub_resource type="Animation" id="Animation_vtboo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text Box:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_lhrdh"]
resource_name = "show_text_box"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Text Box:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Text Box:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1jtsf"]
_data = {
"RESET": SubResource("Animation_vtboo"),
"show_text_box": SubResource("Animation_lhrdh")
}

[node name="Pause" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_tussv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
process_mode = 3
layer = 2
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
process_mode = 3
z_index = 1
motion_mirroring = Vector2(1024, 508)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
process_mode = 3
z_index = 1
position = Vector2(480, 267)
scale = Vector2(2, 2)
texture = ExtResource("9_nhv27")

[node name="Player" type="Node2D" parent="."]
position = Vector2(282, 165)

[node name="Player Marquee" type="Sprite2D" parent="Player"]
position = Vector2(0, 2)
scale = Vector2(4, 4)
texture = ExtResource("2_avlft")

[node name="Player Portrait" type="Sprite2D" parent="Player"]
position = Vector2(0, 2)
scale = Vector2(4.7, 4.7)
texture = ExtResource("5_rg5mu")

[node name="BG Stats" type="Sprite2D" parent="Player"]
modulate = Color(0.0784314, 0.105882, 0.105882, 1)
position = Vector2(298, 193.5)
scale = Vector2(4.79762, 4.35714)
texture = ExtResource("5_85hed")

[node name="BG Name" type="Sprite2D" parent="Player"]
modulate = Color(0.0784314, 0.105882, 0.105882, 1)
position = Vector2(298, 1.49999)
scale = Vector2(4.79762, 4.35714)
texture = ExtResource("5_85hed")

[node name="Name" type="Label" parent="Player"]
offset_left = 103.0
offset_top = -79.0
offset_right = 493.0
offset_bottom = -36.0
theme_override_fonts/font = ExtResource("6_qlr0o")
theme_override_font_sizes/font_size = 40
text = "Player Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Class" type="Label" parent="Player"]
offset_left = 103.0
offset_top = 33.0
offset_right = 492.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("6_qlr0o")
theme_override_font_sizes/font_size = 36
text = "Knight"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Certificates" type="Node2D" parent="Player"]
position = Vector2(106, -85)

[node name="Data Base" type="Sprite2D" parent="Player/Certificates"]
position = Vector2(84, 88)
scale = Vector2(3, 3)
texture = ExtResource("7_hj2gk")

[node name="Cyber Security" type="Sprite2D" parent="Player/Certificates"]
position = Vector2(154, 85)
scale = Vector2(3, 3)
texture = ExtResource("10_gxb87")

[node name="Hardware" type="Sprite2D" parent="Player/Certificates"]
position = Vector2(219, 90)
scale = Vector2(3, 3)
texture = ExtResource("12_js1tp")

[node name="Programming" type="Sprite2D" parent="Player/Certificates"]
position = Vector2(292, 90)
scale = Vector2(3, 3)
texture = ExtResource("10_y7rkn")

[node name="Stats" type="Node2D" parent="Player"]
position = Vector2(105, 120)

[node name="Stats Title" type="Label" parent="Player/Stats"]
offset_left = 61.0
offset_top = -10.0
offset_right = 308.0
offset_bottom = 23.0
theme_override_fonts/font = ExtResource("6_qlr0o")
theme_override_font_sizes/font_size = 35
text = "ESTAD√çSTICAS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Wins" type="Sprite2D" parent="Player/Stats"]
position = Vector2(85, 62)
scale = Vector2(3, 3)
texture = ExtResource("11_slj6t")

[node name="Loses" type="Sprite2D" parent="Player/Stats"]
position = Vector2(152, 64)
scale = Vector2(4, 4)
texture = ExtResource("12_ayrlj")

[node name="Corrects" type="Sprite2D" parent="Player/Stats"]
position = Vector2(224, 59)
scale = Vector2(3, 3)
texture = ExtResource("13_gr14l")

[node name="Incorrects" type="Sprite2D" parent="Player/Stats"]
position = Vector2(289, 63)
scale = Vector2(3, 3)
texture = ExtResource("14_rfg0m")

[node name="Wins Label" type="Label" parent="Player/Stats"]
offset_left = 67.0
offset_top = 94.0
offset_right = 100.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Loses Label" type="Label" parent="Player/Stats"]
offset_left = 133.0
offset_top = 94.0
offset_right = 166.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Corrects Label" type="Label" parent="Player/Stats"]
offset_left = 208.0
offset_top = 94.0
offset_right = 241.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Incorrects Label" type="Label" parent="Player/Stats"]
offset_left = 273.0
offset_top = 94.0
offset_right = 306.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 15
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node2D" parent="."]
position = Vector2(47, 258)

[node name="TextureRect" type="TextureRect" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 139.0
offset_top = 5.0
offset_right = 331.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_avlft")

[node name="Resume Button" type="Button" parent="Buttons"]
offset_left = 159.0
offset_top = 26.0
offset_right = 311.0
offset_bottom = 56.0
focus_neighbor_bottom = NodePath("../Exit Button")
theme_override_fonts/font = ExtResource("16_l2nbv")
theme_override_font_sizes/font_size = 15
text = "VOLVER
"

[node name="Save Button" type="Button" parent="Buttons"]
offset_left = 159.0
offset_top = 56.0
offset_right = 311.0
offset_bottom = 86.0
theme_override_fonts/font = ExtResource("16_l2nbv")
theme_override_font_sizes/font_size = 15
text = "GUARDAR"

[node name="Export Button" type="Button" parent="Buttons"]
visible = false
offset_left = 159.0
offset_top = 86.0
offset_right = 311.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 10
text = "EXPORTAR"

[node name="Options Button" type="Button" parent="Buttons"]
visible = false
offset_left = 159.0
offset_top = 116.0
offset_right = 311.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 10
text = "OPCIONES"

[node name="Exit Button" type="Button" parent="Buttons"]
offset_left = 159.0
offset_top = 146.0
offset_right = 311.0
offset_bottom = 176.0
focus_neighbor_top = NodePath("../Resume Button")
theme_override_fonts/font = ExtResource("16_l2nbv")
theme_override_font_sizes/font_size = 15
text = "SALIR"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1jtsf")
}

[node name="Text Box" type="Node2D" parent="."]
visible = false
position = Vector2(541, 168)
scale = Vector2(1e-05, 1)

[node name="Background" type="Sprite2D" parent="Text Box"]
position = Vector2(41, -1)
scale = Vector2(2.55128, 2.5)
texture = ExtResource("8_jykdq")

[node name="Message" type="Label" parent="Text Box"]
offset_left = -133.0
offset_top = -70.0
offset_right = 205.0
offset_bottom = 68.0
theme_override_fonts/font = ExtResource("4_kc4od")
theme_override_font_sizes/font_size = 15
text = "Partida Guardada"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/Resume Button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Buttons/Save Button" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Buttons/Export Button" to="." method="_on_export_button_pressed"]
[connection signal="pressed" from="Buttons/Exit Button" to="." method="_on_exit_button_pressed"]
